# bsgp7030_capstone

./: .gitignore  README.md  analysis.ipynb  eda.ipynb  env.yml  pyproject.toml  run_app.sh  test.ipynb
.cursor/: AGENTS.md
.ipynb_checkpoints/: analysis-checkpoint.ipynb
app/: app.py  callbacks.py  coach_win_rates.csv  config.py  data.py  figures.py  layout.py  requirements.txt  schema.py  stadium_win_rates.csv  tables.py  theme.py
app/assets/: style.css
scripts/: build_app_csvs.py
src/fifa_wc/: __init__.py  coaches.py  config.py  geocode.py  outcomes.py  stadiums.py
src/fifa_wc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
