[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fifa-wc"
version = "0.1.0"
description = "FIFA World Cup win-rate ETL helpers for the capstone Dash app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "geopy",
]

[tool.setuptools.packages.find]
where = ["src"]
